[package]
name = "stardewvalley-mod-manager"
version = "0.1.0"
authors = ["Daniel Atwood <daniel@atwood.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage = { path = "packages/storage"}